Add day-01 to day-08 solutions

--- a/andinus/day-01/README.org
+++ b/andinus/day-01/README.org
@@ -1,6 +1,6 @@
-#+SETUPFILE: ~/.emacs.d/org-templates/level-2.org
-#+HTML_LINK_UP: ../../writings/
-#+OPTIONS: toc:2
+#+SETUPFILE: ~/.emacs.d/org-templates/level-3.org
+#+HTML_LINK_UP: ../../index.html#2020
+#+OPTIONS: toc:1
 #+EXPORT_FILE_NAME: index
 #+TITLE: Day 01 - Report Repair
 
